--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,18 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  border: 0;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "Poppins", serif;
+}
+
+:root {
+  --background-hulk: #1d2b38;
+  --backgroun-especial: #1a2631;
+
+  --titulo: #d7d7d7;
+  --subtitulo: #8e8d8d;
+
+  --butao: #294862;
+  --butao-hover: #3f6b8f;
+
+  --focus-input: #2c4961;
 }
